# Game-of-Life

./: CMakeLists.txt  Makefile  README.md  grid.c  grid.h  main.c
src/: bitmap.c  bitmap.h  bmp_reader.c  bmp_reader.h  grid.c  grid.h  iocontrol.c  iocontrol.h  main.c  neighbourhoods.c  neighbourhoods.h  neighbours.c  png_reader.c  png_reader.h  png_writer.c  png_writer.h  simulator.c  simulator.h
src/bmp-reader/: bmp_reader.c  bmp_reader.h
